new design for staging/marvelad.css
/* ... */
.header-nav .nav-link {
    font-weight: 600;
    color: #004b8c;
}


/* body {
    cursor: pointer !important;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #ffffff;
} */

.section-full-width {
    width: 100%;
    display: flex;
    justify-content: center;
}

.inner-section-width {
    width: 94% !important;
    display: flex;
    justify-content: center;
}

.news-title {
    font-size: 15px;
    font-weight: 600;
    line-height: 1.5;
    color: black;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    max-height: 39px;
}

.news-description {
    font-size: 13px;
    line-height: 1.3;
    color: #7b7a7a;
    overflow: hidden;
    font-weight: 500;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    max-height: 61px;
}

.section-title-desktop {
    font-weight: 600;
    font-size: 17px;
    color: #004b8c;
    position: relative;
    margin-bottom: 1rem;
}

.section-title-desktop::before {
    padding-top: 5px;
    content: "";
    position: absolute;
    top: 18px;
    left: 2px;
    width: 32px;
    border-bottom: 3px solid gray;
}

.ad-block-top-desktop {
    display: none;
    width: 100%;
    height: 100px;
    background-color: gray;
    margin-top: 15px;
    margin-bottom: 15px;
    margin-right: auto;
    margin-left: auto;
}

.ad-block-mobile {
    display: block;
    width: 320px;
    height: 100px;
    background-color: gray;
    /*margin-top: 15px;
    margin-bottom: 15px;*/
    margin-right: auto;
    margin-left: auto;
}

.transparent-hamburger {
    position: absolute;
    width: 100vw;
    top: 8vh;
    bottom: 0;
    left: 0;
    transform: translateX(-100%);
    transition: all ease .25s;
    background-color: #00000000;
    z-index: 5;
}

.mobile-side-nav {
    width: 20vw;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    background-color: #004B8C;
    z-index: 4;
}

.transparent-hamburger.open {
    width: 100%;
    transform: translateX(0%);
    height: 100%;
}

.close-side-nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 10%;
}

.hamburger-logo {
    margin-right: 20px;
    width: 50vw;
    height: 5vh;
    background-image: url(https://stagingesakal.sakalmediagroup.com/sites/esakal/themes/smg980/logo.png);
    background-repeat: no-repeat;
    background-size: contain;
}

.side-nav-item {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.side-nav-content {
    width: 90%;
    display: flex;
    align-items: center;
    font-weight: 700;
    font-size: 14px;
    border: 1px solid gainsboro;
    padding: 15px;
}

.x-style {
    font-size: 18px;
    font-weight: 600;
}

.mobile-global-nav {
    display: none !important;
}

.mobile-nav-wrapper {
    display: none !important;
    width: 100%;
    height: 6.5vh;
    font-size: 16px;
    background-color: #004B8C;
    box-shadow: inset 0px 2px 3px 0px #061014;
    color: white;
}

.mobile-nav-link {
    text-shadow: 0.5px 0.5px;
    padding: 0px 5px;
    position: relative;
}

.mobile-nav-link::after {
    content: "";
    top: 0px;
    height: 20px;
    right: -12px;
    position: absolute;
    border-right: 1px solid #061014;
}

.mobile-nav-link:last-child::after {
    border-right: none;
}

.adspace {
    position: fixed;
    height: 100vh;
    width: 100vw;
    background-color: grey;
    z-index: -1;
    overflow: hidden;
}

.ad-image {
    width: 100%;
    height: 100%;
}

.top-gap-page-wrapper {
    height: 0vh;
}


/* ============================================================================= */


/* --------- start Nitesh ---------- */

.section-title {
    font-size: 22px;
    font-weight: 600;
    line-height: 1.4;
    color: #004B8C;
    width: fit-content;
}

.section-title:after {
    border-bottom: 3px solid #3F3D3D;
    content: '';
    display: block;
    width: 40%;
}

.news-section-title {
    font-family: ekmukta;
    width: min-content;
    font-size: 12px;
    font-weight: bold;
    line-height: 1.1;
    color: rgb(0, 75, 160);
}

.news-section-title:after {
    /* border-bottom: 2px solid #3F3D3D; */
    content: '';
    display: block;
    width: 75%;
}

.news-footer {
    font-size: 12px;
    line-height: 1.2;
    color: #7b7a7a;
}

.global-nav-wrapper {
    height: 3em;
    font-size: 14px;
    font-weight: 600;
    width: 1040px;
    background-color: #004B8C;
    color: white;
    display: flex;
    /* flex-direction: column; */
    align-items: center;
}

.global-nav {
    width: 80%;
    display: flex;
    align-items: center;
}

.ten {
    width: 10%;
}

.main-wrapper {
    width: 1040px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header {
    width: 80%;
}

.header-logo {
    background-image: url("https://sankey-bucket.s3-ap-southeast-1.amazonaws.com/Sakal.jpg");
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
    height: 120px;
    border-bottom: #B5B5B5 solid 1px;
    font-size: 12px;
    background-size: 266px 160px;
}

.category-title {
    color: black;
    font-size: 15px;
    font-weight: 600;
}

.news-content-div {
    border-bottom: gainsboro solid 1px;
}

.news-content-div:last-child {
    border-bottom: none;
    padding-bottom: 0px;
}

.left-box {
    width: calc(100% - 335px);
    margin-right: 15px !important;
}

.right-box {
    width: 320px;
}

.breaking-news .left-box .left-box-top {
    height: 400px;
    background-image: url(https://lh4.googleusercontent.com/proxy/XPBCY_PH_YeH1erNtUOPuRfAdGgrZyLox7BxPPsraczdaFMdTXts_f_T-X100BUvKtyceQimcxMM-MtbX9SEXghUMBcKRZQ41N_cZulmFcrmfxE6tssQODu2xg4t);
    background-repeat: no-repeat;
    background-position: top;
    background-size: 100% 74%;
    border-bottom: #B5B5B5 solid 1px;
}
/* ... */

